--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,9 @@
   <meta name="keywords" content="Decision, Crowd-Source, App, CMU, Building Distributed Applications, Information Systems">
   <meta name="author" content="Kenny Cohen">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="icon" 
+      type="image/x-icon" 
+      href="img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
